[package]
name = "storm_g4"
version = "0.1.0"
authors = ["Henrik Hallin <henrik@doverhill.se>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = { version = "0.6.3", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.5.0"
x86_64 = "0.7.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
